# Laboratory_18

./: CMakeLists.txt  main.c
tasks/: task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task19.c  task2.c  task3.c  task5.c  task6.c  task7.c  task8.c  task9.c  tasks.c  tasks.h
test/: test.c  test.h
