cmake_minimum_required(VERSION 3.26)
project(Laboratory_18 C)

set(CMAKE_C_STANDARD 11)

add_executable(Laboratory_18
        main.c
        test/test.h
        test/test.c
        tasks/task2.c
        tasks/task3.c
        tasks/task4.c
        tasks/task5.c
        tasks/task6.c
        tasks/task7.c
        tasks/task8.c
        tasks/task9.c
        tasks/task10.c
        tasks/task11.c
        tasks/task12.c
        tasks/task13.c
        tasks/task15.c
        tasks/task16.c
        tasks/task17.c
        tasks/task18.c
        tasks/task19.c
        tasks/task14.c
)
